# PC-setting

./: README.md  TurnOffF1AndInsert.reg  Windows.ps1  outlook.ps1
VBA/Outlook/ai-response/: AskChatGPT.bas
VBA/Outlook/mail-templates/: MailDraft.bas
VBA/Outlook/mail-templates/docs/: プレリード送付.docx  レビューお礼.docx  レビュー依頼.docx  会議後お礼 (エクスターナル).docx  会議設定 (インターナル).docx
VBA/Outlook/outlook-block-sender/: pyproject.toml
VBA/Outlook/outlook-block-sender/outlook_block_sender/: main.ipynb  main.py
VBA/PowerPoint/Copy comment to deck/: Copy text to each slide.xlsm
VBA/PowerPoint/Deleting/: Delete hidden slides.txt  Delete shape with specific text.txt
VBA/PowerPoint/Extract text/: ExtractSlideTitlesAndNumbers.txt  Get no. and title of slide.txt
VBA/PowerPoint/Formatting/: Adjust all font size and name for title.txt  Ajust all fonts.txt  Chart formatting.txt
VBA/PowerPoint/Object and text manuplation/: Copy first shape to all slides.txt  Insert text in the top center.txt  MoveObjectByName.txt  Replace text in charts.txt
VBA/explorer/: Create folders.vbs
excel/: Book.xltx
excel/Add-in/: Custom Add-in.xlam
excel/Templates/: Book.xltx  Sheet.xltx
excel/tools/Create excel from PDF/: Convert pdf to excel.xlsm  Mail body.docx  ~$il body.docx
excel/tools/Download files/: Massive download_v0.1.xlsm
excel/tools/Excel formula/: ARRAYREPEAT.txt  ArrayAddress.txt  Excel formulas.xlsx  ExtractNumber.txt  SUBSTITUTE_ALL.txt  TEXTOCCURENCE.txt  TEXTTOFORMULA.txt
excel/tools/QC/: QC for general data.xlsx
excel/tools/Scheduling/: Extract meeting schedule_v0.1.xlsx
(+7 files in other folders)
